# devops-for-developers-project-22

./: .gitignore  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
paas/database/: __init__.py  db_connection.py  db_init.py  db_models.py
paas/scripts/: app.py  validator.py
paas/scripts/templates/: form.html  form_add.html  form_edit.html  index.html  link_index.html  links_list.html
paas/tests/: conftest.py  test_api.py
services/nginx/: nginx.conf
