[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paas"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
main-app = "paas.scripts.main:main"
